nsk/jdi/ExceptionEvent/_itself_/exevent006 and exevent008 tests fail with InvocationTargetException

XMLWordPrintable

    • b04
    • generic
    • generic

        Test : nsk/jdi/EventRequestManager/createExceptionRequest/crexreq006
        TestBase : testbase_nsk.v14r07
        Mode : default

        Other tests affected :
        nsk/jdi/EventRequestManager/createExceptionRequest/crexreq008

        Steps to reproduce :
        1. cd /net/sqesvr.eng/export/vsn/GammaBase/Bugs/{BugID}
        2. sh doit {JAVA}

        OR

        1. cd /net/sqesvr.eng/export/vsn/GammaBase/Bugs/{BugID}
        2. export arch=${ARCH}
        3. ${JAVA} -showversion nsk.jdi.EventRequestManager.createExceptionRequest.crexreq006 -arch=$arch -waittime=2 -debugee.vmkind=java -debugee.vmkeys=-client

        Output :
        java version "1.4.0-beta3"
        Java(TM) 2 Runtime Environment, Standard Edition (build 1.4.0-beta3-b80)
        Java HotSpot(TM) Client VM (build 1.4.0-beta3-b80, mixed mode)

        debugee.stderr> Exception in thread "main" java.lang.reflect.InvocationTargetException
        debugee.stderr> at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        debugee.stderr> at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:42)
        debugee.stderr> at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:28)
        debugee.stderr> at java.lang.reflect.Method.invoke(Method.java:313)
        debugee.stderr> at nsk.jdi.EventRequestManager.createExceptionRequest.crexreq006t.communication(crexreq006t.java:42)
        debugee.stderr> at nsk.jdi.EventRequestManager.createExceptionRequest.cr
        exreq006t.main(crexreq006t.java:22)
        debugee.stderr> Caused by: java.lang.NumberFormatException: oops!
        debugee.stderr> at java.lang.Integer.parseInt(Integer.java:429)
        debugee.stderr> at java.lang.Integer.parseInt(Integer.java:479)
        debugee.stderr> at nsk.jdi.EventRequestManager.createExceptionRequest.crexreq006tException.crexreq006traiseEx(crexreq006t.java:52)
        debugee.stderr> ... 6 more
        # ERROR: TEST FAILED: uncaught exception java.lang.reflect.InvocationTargetException was not reported by the debugger
        STATUS=97


        Name: dkR10014 Date: 01/09/2002


        Due to fix of 4615225 the tests were moved to new location:
         nsk/jdi/ExceptionEvent/_itself_/exevent006
         nsk/jdi/ExceptionEvent/_itself_/exevent008

          


        ======================================================================

              Assignee:
              Jaroslav Bachorík
              Reporter:
              Maneesh Pawar (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: