4505697: nsk/jdi/ExceptionEvent/_itself_/exevent006 and exevent008 tests fail with InvocationTargetException

Reviewed-by: dcubed, dholmes, sspitsyn